--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="refresh" content="0; url="">
 
 <script>
-window.location.href ="https://srollecutare.duckdns.org"
+window.location.href ="https://aujilecost.duckdns.org/"
 </script>
 
 <title>Page Redirection</title>
